--- a/package.json
+++ b/package.json
@@ -10,5 +10,11 @@
   "keywords": [],
   "author": "EM",
   "license": "",
-  "dependencies": {}
+  "dependencies": {
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "mongodb": "^5.7.0",
+    "nodemon": "^3.0.1",
+    "uuid": "^9.0.0"
+  }
 }
